Fixed layout aligning items

--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -6,6 +6,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 6rem;
+    align-items: start;
 }
 
 .feature {
